<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.macbook.homework4.AddressConsoleMain">

    <TextView
        android:id="@+id/textAddressMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_weight="0.61"
        android:id="@+id/listAddresses"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:scrollbarStyle="insideInset"
        ></ListView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editRecordNumber"
        android:hint="@string/recordNumber"
        android:text="@string/nothing"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdAdd"
        android:text="@string/add"
        style="?android:attr/buttonStyleSmall"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdEdit"
        android:text="@string/edit"
        style="?android:attr/buttonStyleSmall"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdView"
        android:text="@string/view"
        style="?android:attr/buttonStyleSmall"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdDelete"
        android:text="@string/delete"
        style="?android:attr/buttonStyleSmall"
        />

</LinearLayout>
